# trame-vuetify

./: .codespellrc  .flake8  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml  website.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/examples/: index.md  login.md  support.md  trame.md  ui.md
examples/doc/layouts/: single_page.py  single_page_with_drawer.py  vapp.py
examples/doc/login/: compact.py
examples/vue2/: basic.py
examples/vue3/: basic.py  datatable.py  datepicker.py  stepper.py  theme.py  timeController.py
examples/vue3-labs/: basic.py  basictree.py  tree.py
tests/: conftest.py  requirements.txt  test_ui.py
trame/modules/: vuetify.py  vuetify2.py  vuetify3.py  vuetify3_lab.py
trame/ui/: vuetify.py  vuetify3.py
trame/widgets/: vuetify.py  vuetify2.py  vuetify3.py
trame_vuetify/: __init__.py
trame_vuetify/module/: .gitignore  __init__.py  vue2.py  vue3.py  vue3_lab.py
trame_vuetify/ui/: vuetify.py  vuetify3.py
trame_vuetify/widgets/: vuetify.py  vuetify3.py
vue-components/: .eslintrc.js  .header.py  .prettierrc  generate_python.py  package-lock.json  vue.config.js
vue-components/src/: use.js
vue2/: .header.py  README.md  generate_python.py  package-lock.json  package.json  vue.config.js
vue2/src/: use.js
vue3/: .header.py  README.md  generate_python.py
vue3-lab/: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.js
vue3-lab/src/: main.js
(+2 files in other folders)
