[metadata]
name = trame-vuetify
version = 2.0.0rc6
description = Vuetify widgets for trame
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame-client
